# cstech_rep

./: CMakeLists.txt  README.md  chess  chess.cpp  chess.h  config.h  file1.txt  main.cpp  showit  sonuçlar.txt
include/: chess.h  config.h
src/: chess.cpp  main.cpp
